--- a/01_arrayCrescente2.html
+++ b/01_arrayCrescente2.html
@@ -4,11 +4,17 @@
     //Retorne os elementos do array, separando-os por hífen (n1 - n2).
 
     //ENTRADA
-
+    const n1 = Number(prompt(`Informe um número inteiro:`));
+    const n2 = Number(prompt(`Informe outro número inteiro:`));
 
     //PROCESSAMENTO
-
-
+    let arrayVazio = [];
+    if (n1 > n2) {
+        arrayVazio = [n2, n1];
+    }
+    else {
+        arrayVazio = [n1, n2];
+    }
     //SAÍDA
-    
+    document.write(`Os elementos do array são: ${arrayVazio.join(" - ")}.`);
 </script>
